--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@
 # Antoine Pietri <antoine.pietri1@gmail.com>, 2015
 # Dettorer <p.hervot@gmail.com>, 2015
 # Dettorer <p.hervot@gmail.com>, 2015
-# Rémi Audebert <rflah0@gmail.com>, 2015
+# Rémi Audebert <rflah0@gmail.com>, 2015-2016
 # Robin Thoni <rob57530@gmail.com>, 2015
 # Alexandre Macabies <web+transifex@zopieux.com>, 2015
 # Yves Stadler <mvyonline@gmail.com>, 2015
@@ -18,8 +18,8 @@ msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-08 20:50+0100\n"
-"PO-Revision-Date: 2016-01-08 19:51+0000\n"
-"Last-Translator: Alexandre Macabies <web+transifex@zopieux.com>\n"
+"PO-Revision-Date: 2016-01-10 01:02+0000\n"
+"Last-Translator: Rémi Audebert <rflah0@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3617,7 +3617,7 @@ msgid ""
 "\n"
 "--\n"
 "The Prologin staff\n"
-msgstr "\nBonjour %(username)s !\n\nMerci de votre inscription à Prologin. Pour finaliser l'inscription, vous devez activer votre compte.\n\nVeuillez ouvrir le lien qui suit dans votre navigateur :\n\n%(url)s\n\nSi vous ne pouvez pas cliquer sur le lien, copiez-collez le dans la barre d'adresse de votre navigateur.\n\nSi avez une question, n'hésitez pas à nous contacter à l'adresse %(contactmail)s.\n\n--\nL'équipe Prologin\n"
+msgstr "\nBonjour %(username)s !\n\nMerci de votre inscription à Prologin. Pour finaliser l'inscription, vous devez activer votre compte.\n\nVeuillez ouvrir le lien qui suit dans votre navigateur :\n\n%(url)s\n\nSi vous ne pouvez pas cliquer sur le lien, copiez-collez le dans la barre d'adresse de votre navigateur.\n\nSi vous avez une question, n'hésitez pas à nous contacter à l'adresse %(contactmail)s.\n\n-- \nL'équipe Prologin\n"
 
 #: users/templates/users/mails/activation.subject.html:1
 msgid "Activate your Prologin account"
@@ -3649,7 +3649,7 @@ msgid ""
 "\n"
 "--\n"
 "The Prologin staff\n"
-msgstr "\nBonjour %(username)s !\n\nQuelqu'un a demandé de réinitialiser votre mot de passe sur le site de Prologin. Si vous avez effectivement formulé cette requête, veuillez ouvrir le lien qui suit dans votre navigateur :\n\n%(url)s\n\nSi vous ne pouvez pas cliquer sur le lien, copiez-collez le dans la barre d'adresse de votre navigateur.\n\nSi vous n'avez pas pas demandé cette réinitialisation, cela signifie qu'un utilisateur malveillant tente d'accéder à votre compte. Ne cliquez pas sur le lien ci-dessus, ignorez cet e-mail voire supprimez-le.\n\nSi vous continuez à recevoir ce genre de demandes non sollicitées, merci d'entrer en contact avec l'équipe Prologin en nous envoyant un e-mail à l'adresse ci-dessous.\n\nSi avez une question, n'hésitez pas à nous contacter à l'adresse %(contactmail)s.\n\n--\nL'équipe Prologin\n"
+msgstr "\nBonjour %(username)s !\n\nQuelqu'un a demandé de réinitialiser votre mot de passe sur le site de Prologin. Si vous avez effectivement formulé cette requête, veuillez ouvrir le lien qui suit dans votre navigateur :\n\n%(url)s\n\nSi vous ne pouvez pas cliquer sur le lien, copiez-collez le dans la barre d'adresse de votre navigateur.\n\nSi vous n'avez pas pas demandé cette réinitialisation, cela signifie qu'un utilisateur malveillant tente d'accéder à votre compte. Ne cliquez pas sur le lien ci-dessus, ignorez cet e-mail voire supprimez-le.\n\nSi vous continuez à recevoir ce genre de demandes non sollicitées, merci d'entrer en contact avec l'équipe Prologin en nous envoyant un e-mail à l'adresse ci-dessous.\n\nSi vous avez une question, n'hésitez pas à nous contacter à l'adresse %(contactmail)s.\n\n-- \nL'équipe Prologin\n"
 
 #: users/templates/users/mails/pswd_reset.subject.html:1
 msgid "Your Prologin password reset request"
