documents: fix convocation-regionale.tex template variables

--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -19,7 +19,7 @@
 Bonjour {{ user.first_name|escapetex }},
 
 Nous avons le plaisir de vous informer que vous êtes sélectionné
-pour la phase des épreuves régionales du concours Prologin 2013.
+pour la phase des épreuves régionales du concours {{ year|escapetex|nonempty }}.
 Comme vous nous l'avez demandé, votre épreuve aura lieu à:
 
 {\par\smallskip\noindent\centering
