--- a/prologin/documents/templates/documents/prologin-letter.sty
+++ b/prologin/documents/templates/documents/prologin-letter.sty
@@ -35,4 +35,4 @@ Tél.~: 01 44 08 01 90 --- E-mail~: \url{info@prologin.org} --- \url{http://www.
 
 \def\signature{\vspace{1cm}\hspace{8cm}\parbox{7cm}{Pour l'équipe Prologin,\\
 %\includegraphics[width=36mm]{res/signature}\\
-Le vice-président, Antoine \textsc{Pietri}}}
+Le président, Alexandre \textsc{Bonnetain}}}
