documents: fix colons in droit-image.tex

--- a/prologin/documents/templates/documents/droit-image.tex
+++ b/prologin/documents/templates/documents/droit-image.tex
@@ -9,9 +9,9 @@
 
 Je soussigné(e), \dotfill
 
-Adresse :\dotfill
+Adresse~:\dotfill
 
-Code Postal : \dotfill  Ville : \dotfill
+Code Postal~: \dotfill  Ville~: \dotfill
 
 autorise l'association Prologin à me photographier et me filmer dans
 le cadre de la finale du Concours National d'Informatique qui se tiendra du 7 au 10 mai~2015.
@@ -34,6 +34,6 @@ Je soussigné \dotfill\\
 déclare être le parent ou le représentant légal du mineur nommé
 ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
 
-Date et signature du représentant légal :
+Date et signature du représentant légal~:
 
 \end{document}
