documents: add logo to prologin-letter.sty

--- a/prologin/documents/templates/documents/prologin-letter.sty
+++ b/prologin/documents/templates/documents/prologin-letter.sty
@@ -21,7 +21,7 @@
 14 -- 16 rue Voltaire --- 94270 Le Kremlin-Bicêtre --- France\\
 Tél.~: 01 44 08 01 90 --- E-mail~: \url{info@prologin.org} --- \url{http://www.prologin.org}}
 
-\def\header{%\includegraphics[width=0.5\textwidth]{res/logo}
+\def\header{\includegraphics[width=0.3\textwidth]{logo2016.pdf} %FIXME hard coded
 
 \hspace{9.5cm}\parbox{6.5cm}{\destinataire}
 
@@ -34,5 +34,5 @@ Tél.~: 01 44 08 01 90 --- E-mail~: \url{info@prologin.org} --- \url{http://www.
 \noindent\textbf{\underline{Objet~:} \objet}}
 
 \def\signature{\vspace{1cm}\hspace{8cm}\parbox{7cm}{Pour l'équipe Prologin,\\
-%\includegraphics[width=36mm]{res/signature}\\
-Le président, Alexandre \textsc{Bonnetain}}}
+%\includegraphics[width=36mm]{res/signature}\\ %TODO add signature
+Le président, Alexandre \textsc{Bonnetain}}} %FIXME idem
