documents: fix typo in droit-image.tex

--- a/prologin/documents/templates/documents/droit-image.tex
+++ b/prologin/documents/templates/documents/droit-image.tex
@@ -30,7 +30,7 @@ Date et signature du candidat :\vspace\baselineskip
 
 \textbf{À remplir par le représentant légal si le candidat est mineur}
 
-Je soussigné \dotfill\\
+Je soussigné(e) \dotfill\\
 déclare être le parent ou le représentant légal du mineur nommé
 ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
 
