documents: convocation-regionale: centering

--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -24,6 +24,7 @@ Comme vous nous l'avez demandé, votre épreuve aura lieu à:
 
 {\par\smallskip\noindent\centering
 \begin{minipage}{0.5\textwidth}
+\begin{center}
 \textbf{%
 {{ center.name|escapetex|nonempty }}%
 }\\
@@ -33,6 +34,7 @@ Comme vous nous l'avez demandé, votre épreuve aura lieu à:
 \textbf{%
 {{ center.postal_code|escapetex|nonempty }} {{ center.city|escapetex|nonempty }}%
 }
+\end{center}
 \end{minipage}
 \par\smallskip}
 
