--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -12,11 +12,11 @@
 \def\destinataire{%
 {{ user.get_full_name|title|escapetex|nonempty }}\\
 {{ user.address|title|escapetex|nonempty }}\\
-{{ user.postal_code|title|escapetex|nonempty }} {{ user.city|escapetex|nonempty }}%
+{{ user.postal_code|escapetex|nonempty }} {{ user.city|title|escapetex|nonempty }}%
 }
 \header
 
-Bonjour {{ user.first_name|escapetex }},
+Bonjour {{ user.first_name|title|escapetex }},
 
 Nous avons le plaisir de vous informer que vous êtes sélectionné
 pour la phase des épreuves régionales du concours Prologin {{ year|escapetex|nonempty }}.
