documents: |title only when appropriate

--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -11,13 +11,13 @@
 {% with event=item.event center=item.event.center user=item.contestant.user %}
 
 \def\destinataire{%
-{{ user.get_full_name|escapetex|nonempty }}\\
+{{ user.get_full_name|title|escapetex|nonempty }}\\
 {{ user.address|escapetex|nonempty }}\\
 {{ user.postal_code|escapetex|nonempty }} {{ user.city|escapetex|nonempty }}%
 }
 \header
 
-Bonjour {{ user.first_name|escapetex }},
+Bonjour {{ user.first_name|title|escapetex }},
 
 Nous avons le plaisir de vous informer que vous êtes sélectionné
 pour la finale du concours Prologin 2013, qui se déroulera à:
