--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -11,8 +11,8 @@
 
 \def\destinataire{%
 {{ user.get_full_name|title|escapetex|nonempty }}\\
-{{ user.address|title|escapetex|nonempty }}\\
-{{ user.postal_code|escapetex|nonempty }} {{ user.city|title|escapetex|nonempty }}%
+{{ user.address|escapetex|nonempty }}\\
+{{ user.postal_code|escapetex|nonempty }} {{ user.city|escapetex|nonempty }}%
 }
 \header
 
