documents: convocation-regionale.tex: add SITE_BASE_URI

--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -49,7 +49,9 @@ sur machine (3~h~30) se dérouleront l'après-midi. Vous serez libérés vers
 17~h~30 environ.
 
 Pour vous préparer à l'épreuve, nous vous invitons à utiliser le site
-d'entraînement de Prologin: \url{http://www.prologin.org}.
+d'entraînement de Prologin: \url{%
+  {{ url }}%
+}.
 
 Nous restons à votre disposition pour toutes questions, n'hésitez pas
 à nous contacter.
