mailing, documents: 2016 semifinals

--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -40,7 +40,8 @@ Comme vous nous l'avez demandé, votre épreuve aura lieu à:
 
 L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|date:"l d F Y"|escapetex }}
 à partir de 8~h~45 (début des épreuves à 9~heures). Nous vous demandons
-de bien vouloir vous munir d'\textbf{une pièce d'identité et de cette convocation}.
+de bien vouloir vous munir d'\textbf{une pièce d'identité et de cette
+convocation} ainsi que de votre \textbf{fiche de droit à l'image complétée}.
 
 Après un petit déjeuner offert par Prologin, la journée commencera par une
 épreuve écrite d'algorithmique d'une durée de 3~heures et un entretien de
