--- a/prologin/documents/templates/documents/passwords.tex
+++ b/prologin/documents/templates/documents/passwords.tex
@@ -4,6 +4,9 @@
 \usepackage{multicol}
 \usepackage{framed}
 \usepackage[margin=1.5cm]{geometry}
+\usepackage[pdftex,
+            pdfauthor={Prologin},
+            pdftitle={ {{ pdf_title }} }]{hyperref}
 
 \setlength{\parskip}{0pt}
 \setlength{\parsep}{0pt}
@@ -15,31 +18,32 @@
 \setlength{\columnsep}{0pt}
 \setlength{\voffset}{-0.75in}
 \setlength{\headsep}{0pt}
+\setlength{\columnseprule}{0.4pt}
 \linespread{0.5}
 
 \newcommand{\card}[3]{%
-    \begin{framed}%
+    \begin{minipage}{\linewidth}%
         \begin{tabular}{rl}%
             Nom          & #1 \\
             Login        & \texttt{#2} \\
             Mot de passe & \texttt{#3}
         \end{tabular}%
-    \end{framed}%
+    \end{minipage}\\[10pt]
 }%
 
 \begin{document}
 \pagestyle{empty}
 
-{% for center, wishes in items %}
+{% for center, contestants in center_contestants %}
 \begin{center}
     \Large
     Liste des mots de passe -- Prologin {{ year }} -- {{ center.name|escapetex }}
 \end{center}
 \begin{multicols}{2}
 \noindent%
-{% for item in wishes %}{% with user=item.contestant.user %}%
+{% for contestant in contestants %}{% with user=contestant.user %}%
 \card{%
-{{ user.get_full_name|escapetex }}%
+{{ user.get_full_name|title|escapetex }}%
 }{%
 {{ user.username|escapetex }}%
 }{%
