--- a/prologin/documents/templates/documents/liste-appel.tex
+++ b/prologin/documents/templates/documents/liste-appel.tex
@@ -8,6 +8,9 @@
 \usepackage{longtable}
 \usepackage{graphicx}
 \usepackage[table]{xcolor}
+\usepackage[pdftex,
+            pdfauthor={Prologin},
+            pdftitle={ {{ pdf_title }} }]{hyperref}
 
 \geometry{top=10mm,bottom=10mm,left=10mm,right=10mm,head=0mm}
 \renewcommand{\arraystretch}{1.5}
@@ -15,7 +18,7 @@
 
 \begin{document}
 
-{% for center, wishes in items %}
+{% for center, contestants in center_contestants %}
 
 \begin{center}
     \Large
@@ -37,8 +40,8 @@
 \endfoot
 \endlastfoot
 
-{% for wish in wishes %}{% with user=wish.contestant.user %}
-{{ user.last_name|escapetex }} & {{ user.first_name|escapetex }} & {{ user.birthday|date:"Y-m-d"|escapetex }} & & \\\hline
+{% for contestant in contestants %}{% with user=contestant.user %}
+{{ user.last_name|title|escapetex }} & {{ user.first_name|title|escapetex }} & {{ user.birthday|date:"Y-m-d"|escapetex }} & & \\\hline
 {% endwith %}{% endfor %}
 
 \end{longtable}
