--- a/prologin/documents/templates/documents/interviews.tex
+++ b/prologin/documents/templates/documents/interviews.tex
@@ -3,14 +3,12 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[french]{babel}
+\usepackage[francais]{babel}
 \usepackage[tmargin=5mm,bmargin=15mm,lmargin=15mm,rmargin=15mm,head=0mm]{geometry}
 \usepackage{longtable}
 \usepackage{graphicx}
 \usepackage{makecell}
-\usepackage[pdftex,
-            pdfauthor={Prologin},
-            pdftitle={ {{ pdf_title }} }]{hyperref}
+{% include "documents/stub-preamble.tex" %}
 
 \def\identite{11.5cm}
 \def\notes{5.5cm}
