--- a/prologin/documents/templates/documents/liste-appel.tex
+++ b/prologin/documents/templates/documents/liste-appel.tex
@@ -3,14 +3,12 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[french]{babel}
+\usepackage[francais]{babel}
 \usepackage[a4paper,dvips]{geometry}
 \usepackage{longtable}
 \usepackage{graphicx}
 \usepackage[table]{xcolor}
-\usepackage[pdftex,
-            pdfauthor={Prologin},
-            pdftitle={ {{ pdf_title }} }]{hyperref}
+{% include "documents/stub-preamble.tex" %}
 
 \geometry{top=10mm,bottom=10mm,left=10mm,right=10mm,head=0mm}
 \renewcommand{\arraystretch}{1.5}
