--- a/prologin/documents/templates/documents/passwords.tex
+++ b/prologin/documents/templates/documents/passwords.tex
@@ -4,9 +4,8 @@
 \usepackage{multicol}
 \usepackage{framed}
 \usepackage[margin=1.5cm]{geometry}
-\usepackage[pdftex,
-            pdfauthor={Prologin},
-            pdftitle={ {{ pdf_title }} }]{hyperref}
+\usepackage[francais]{babel}
+{% include "documents/stub-preamble.tex" %}
 
 \setlength{\parskip}{0pt}
 \setlength{\parsep}{0pt}
