--- a/prologin/documents/templates/documents/passwords.tex
+++ b/prologin/documents/templates/documents/passwords.tex
@@ -33,10 +33,10 @@
 \begin{document}
 \pagestyle{empty}
 
-{% for center, contestants in center_contestants %}
+{% for event, contestants in event_contestants %}
 \begin{center}
     \Large
-    Liste des mots de passe -- Prologin {{ year }} -- {{ center.name|escapetex }}
+    Liste des mots de passe -- Prologin {{ year }} -- {{ event.center.name|escapetex }} -- {{ event.date_begin|date:"SHORT_DATE_FORMAT"|escapetex }}
 \end{center}
 \begin{multicols}{2}
 \noindent%
