--- a/prologin/documents/templates/documents/liste-appel.tex
+++ b/prologin/documents/templates/documents/liste-appel.tex
@@ -16,11 +16,11 @@
 
 \begin{document}
 
-{% for center, contestants in center_contestants %}
+{% for event, contestants in event_contestants %}
 
 \begin{center}
     \Large
-    Liste des candidats -- Prologin {{ year }} -- {{ center.name|escapetex }}
+    Liste des candidats -- Prologin {{ year }} -- {{ event.center.name|escapetex }} -- {{ event.date_begin|date:"SHORT_DATE_FORMAT"|escapetex }}
 \end{center}
 
 \pagestyle{empty}
