misc: use a normalized username instead of real username

--- a/prologin/documents/templates/documents/passwords.tex
+++ b/prologin/documents/templates/documents/passwords.tex
@@ -44,7 +44,7 @@
 \card{%
 {{ user.get_full_name|title|escapetex }}%
 }{%
-{{ user.username|escapetex }}%
+{{ user.normalized_username|escapetex }}%
 }{%
 {{ user.plaintext_password|escapetex }}%
 }%
