documents: interview: update questions

--- a/prologin/documents/templates/documents/interviews.tex
+++ b/prologin/documents/templates/documents/interviews.tex
@@ -68,17 +68,18 @@
 
     \small
     \begin{itemize}
-        \item Est-ce que les coordonnées sont exactes?
-        \item Âge? Comment a-t-il connu le concours?
-        \item Première participation?
-        \item Langages de programmation connus?
-        \item Études envisagées, faites?
-        \item Programme depuis combien de temps?
-        \item Projets perso?
-        \item Nouveaux projets depuis l'année dernière?
-        \item Questions d'algo, listes, piles, files, arbres, graphes, énigmes\ldots
-        \item \emph{À la fin, au feeling} nom du chat, citer une actualitée récente
-        (informatique, non informatique)\ldots
+        \item L'épreuve écrite se passe bien ?
+        \item Première participation ?
+        \item Programme depuis combien de temps ?
+        \item Intérêts et domaines en informatique ?
+        \item Langages de programmation connus ?
+        \item Études envisagées, faites ?
+        \item Projets perso ?
+        \item Nouveaux projets depuis l'année dernière ?
+        \item Nous parler de quelque chose en info ?
+        \item Hobbies non informatiques ?
+        \item Avis ou remarques sur le concours ?
+        \item Des questions pour nous ?
     \end{itemize}
     \normalsize
     \makecell{\vspace{\entretienlong}} &
