--- a/prologin/documents/templates/documents/droit-image-finale.tex
+++ b/prologin/documents/templates/documents/droit-image-finale.tex
@@ -6,11 +6,11 @@
 
 \begin{document}
 
-Je soussigné(e), \dotfill
+Je soussigné(e) \hrulefill
 
-Adresse~: \dotfill
+Adresse \hrulefill
 
-Code Postal~: \dotfill  Ville~: \dotfill
+Code postal \hrulefill{} Ville \hrulefill\hrulefill\hrulefill{} Pays \hrulefill
 
 autorise l'association Prologin à me photographier et me filmer dans
 le cadre de la finale du Concours National d'Informatique qui se tiendra du
@@ -27,15 +27,16 @@ En conséquence de quoi, je renonce expressément à me prévaloir d'un
 quelconque droit à l'image et à toute action à l'encontre de Prologin qui
 trouverait son origine dans l'exploitation de mon image dans le cadre précité.
 
-Date et signature du candidat :\vspace\baselineskip
+\begin{signatureframe}{Date et signature du candidat}\end{signatureframe}
 
-\textbf{À remplir par le représentant légal si le candidat est mineur}
+\begin{legalrepframe}[title=À remplir par le représentant légal si le candidat est mineur]
+Je soussigné(e) \hrulefill
 
-Je soussigné(e) \dotfill\\
 déclare être le parent ou le représentant légal du mineur nommé
 ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
 
-Date et signature du représentant légal~:
+\begin{signatureframe}{Date et signature du représentant légal}\end{signatureframe}
+\end{legalrepframe}
 
 \end{document}
 {% endautoescape %}
