documents: final: minor fixes

--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -20,7 +20,7 @@
 Bonjour {{ user.first_name|title|escapetex }},
 
 Nous avons le plaisir de vous informer que vous êtes sélectionné
-pour la finale du concours Prologin 2013, qui se déroulera à:
+pour la finale du concours Prologin {{ year }}, qui se déroulera à:
 
 {\par\smallskip\noindent\centering
 \begin{minipage}{0.5\textwidth}
@@ -39,8 +39,8 @@ pour la finale du concours Prologin 2013, qui se déroulera à:
 L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|date:"l d F Y"|escapetex }}
 à 9~h~00. Le concours, d'une durée de 36~heures, prendra fin avec le banquet du
 lundi midi. Vous serez donc libre à partir de 15~h~00. Notez que la
-programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#, ou
-en Caml. Nous vous demandons de bien vouloir vous munir d'\textbf{une pièce d'identité
+programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#, Haskell ou OCaml.
+Nous vous demandons de bien vouloir vous munir d'\textbf{une pièce d'identité
 et de cette convocation, ainsi que de tous les documents ci-joints dûment
 remplis}. Attention, sans ces documents, nous ne pourrons pas vous
 accepter!
