templates: remove www

--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -39,29 +39,32 @@ pour la finale du concours Prologin {{ year }}, qui se déroulera à:
 L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|date:"l d F Y"|escapetex }}
 à 9~h~00. Le concours, d'une durée de 36~heures, prendra fin avec le banquet du
 lundi midi. Vous serez donc libre à partir de 15~h~00. Notez que la
-programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#, Haskell ou OCaml.
-Nous vous demandons de bien vouloir vous munir d'\textbf{une pièce d'identité
-et de cette convocation, ainsi que de tous les documents ci-joints dûment
-remplis}. Attention, sans ces documents, nous ne pourrons pas vous
-accepter!
+programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#,
+Haskell ou OCaml. Nous vous demandons de bien vouloir vous munir d'\textbf{une
+pièce d'identité et de cette convocation, ainsi que de tous les documents
+ci-joints dûment remplis}. Attention, sans ces documents, nous ne pourrons pas
+vous accepter!
 
-Si vous le souhaitez, il vous est possible de passer la nuit du vendredi dans les locaux. Les
-organisateurs Prologin assureront l'accueil à partir de 17~h~00 et
-proposeront entre autres des formations GNU/Linux pendant la soirée.
+Si vous le souhaitez, il vous est possible de passer la nuit du vendredi dans
+les locaux. Les organisateurs Prologin assureront l'accueil à partir de 17~h~00
+et proposeront entre autres des formations GNU/Linux pendant la soirée.
 
-En attendant, je vous invite à découvrir sur le site \texttt{www.prologin.org}
-les sujets des finales des années précédentes.
-Nous nous occuperons de vous durant ces trois jours pour tout ce qui concerne la
-nourriture et le logement. Voici quelques recommandations quant aux affaires
+En attendant, je vous invite à découvrir sur le site
+\texttt{https://prologin.org} les sujets des finales des années précédentes.
+Nous nous occuperons de vous durant ces trois jours pour tout ce qui concerne
+la nourriture et le logement. Voici quelques recommandations quant aux affaires
 dont vous aurez besoin:
+
 \begin{itemize}
-\item deux tenues complètes de rechange;
-\item une tenue que vous n'avez pas peur de salir un peu;
-\item une grande serviette de bain, ainsi qu'une brosse à dents;
-\item un sac de couchage (nous fournissons le matelas);
-\item une bonne dose de courage et de bonne humeur!
+  \item deux tenues complètes de rechange ;
+  \item une tenue que vous n'avez pas peur de salir un peu ;
+  \item une grande serviette de bain, ainsi qu'une brosse à dents ;
+  \item un sac de couchage (nous fournissons le matelas) ;
+  \item une bonne dose de courage et de bonne humeur!
 \end{itemize}
+
 \vspace{0.5cm}
+
 Nous restons à votre disposition pour toutes questions, n'hésitez pas
 à nous contacter.
 
