documents: enrollment form: use hrulefill

--- a/prologin/documents/templates/documents/fiche-adhesion.tex
+++ b/prologin/documents/templates/documents/fiche-adhesion.tex
@@ -7,30 +7,30 @@
 \begin{document}
 \section*{État civil}
 
-Nom : \dotfill
+Nom : \hrulefill
 
-Prénom : \dotfill
+Prénom : \hrulefill
 
 \section*{Contact}
 
-E-mail : \dotfill
+E-mail : \hrulefill
 
-Téléphone : \dotfill
+Téléphone : \hrulefill
 
-Adresse : \dotfill
+Adresse : \hrulefill
 
-\dotfill
+\hrulefill
 
 \section*{Informations supplémentaires}
-Pseudo : \dotfill
+Pseudo : \hrulefill
 
-Login IONIS : \dotfill
+Login IONIS : \hrulefill
 
-Promotion (école \& année) : \dotfill
+Promotion (école \& année) : \hrulefill
 
 \vspace{2cm}
 
-Fait à \dotspace{4cm}, le \dotspace{4cm}.
+Fait à \hrulefill, le \hrulefill.
 
 Signature :
 
