documents: fix start date of the final

--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -36,7 +36,7 @@ pour la finale du concours Prologin {{ year }}, qui se déroulera à:
 \end{minipage}
 \par\smallskip}
 
-L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|date:"l d F Y"|escapetex }}
+L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|add_days:1|date:"l d F Y"|escapetex }}
 à 9~h~00. Le concours, d'une durée de 36~heures, prendra fin avec le banquet du
 lundi midi. Vous serez donc libre à partir de 15~h~00. Notez que la
 programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#,
@@ -46,7 +46,7 @@ ci-joints dûment remplis}. Attention, sans ces documents, nous ne pourrons pas
 vous accepter!
 
 Si vous le souhaitez, il vous est possible de passer la nuit du vendredi dans
-les locaux. Les organisateurs Prologin assureront l'accueil à partir de 17~h~00
+les locaux. Les organisateurs Prologin assureront l'accueil à partir de 18~h~00
 et proposeront entre autres des formations GNU/Linux pendant la soirée.
 
 En attendant, je vous invite à découvrir sur le site
